# repo_reaper

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile  rustfmt.toml
.github/workflows/: general.yml  security_audit.yml
configuration/: bm25.yml
crates/cli/: Cargo.toml
crates/cli/src/: eval.rs  lib.rs  live_search.rs  main.rs
crates/core/: Cargo.toml
crates/core/benches/: search_bench.rs
crates/core/src/: config.rs  error.rs  fs_walk.rs  lib.rs  query.rs
crates/core/src/code_intelligence/: mod.rs  tree_sitter_impl.rs
crates/core/src/code_intelligence/queries/: go.scm  javascript.scm  markdown.scm  python.scm  rust.scm  typescript.scm
crates/core/src/evaluation/: dataset.rs  metrics.rs  mod.rs
crates/core/src/evaluation/metrics/: file_retrieval.rs  groundedness.rs  report.rs  tests.rs  token_efficiency.rs  types.rs  util.rs
crates/core/src/index/: compression.rs  corpus.rs  document_registry.rs  engine.rs  event_log.rs  field.rs  inverted_file.rs  inverted_index.rs  mod.rs  quality.rs  reader.rs  skips.rs  snapshot.rs  term.rs
crates/core/src/ranking/: bm25.rs  bm25f.rs  cosine_similarity.rs  explanation.rs  features.rs  feedback.rs  mod.rs  proximity.rs  query_likelihood.rs  scorer.rs  tf_idf.rs
crates/core/src/regex_search/: candidate_mask.rs  corpus.rs  disk_postings.rs  engine.rs  mod.rs  planner.rs  regex_query.rs  sparse_ngram.rs  tests.rs  trigram_index.rs  types.rs
crates/core/src/tokenizer/: analyzer.rs  identifier.rs  mod.rs  pipeline.rs
data/: train.json
data/eval/: repo_reaper.json
src/: cli.rs  config.rs  globals.rs  inverted_index.rs  lib.rs  main.rs
src/evaluation/: evaluation_data.rs  mod.rs  ranking_evaluation.rs
src/ranking/: bm25.rs  cosine_similarity.rs  mod.rs  rank.rs  tf_idf.rs  utils.rs
src/text_transform/: mod.rs  query.rs  transform.rs
