[package]
name = "repo_reaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
walkdir = "^2.4.0"
rust-stemmers = "^1.0"
stop-words = "^0.8.0"
tokenizers = "^0.15"
config = { version = "^0.13", default-features = false, features = ["yaml"] }
serde = "^1.0"
