[package]
name = "repo_reaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
anyhow = "^1.0"
thiserror = "^1.0"
walkdir = "^2.4.0"
rust-stemmers = "^1.0"
stop-words = "^0.8.0"
config = { version = "^0.13", default-features = false, features = ["yaml"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
"rayon" = "^1.8"
notify = "^6.1"
url = "^2.5"
