[package]
name = "repo_reaper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "^4.6", features = ["derive"] }
anyhow = "^1.0"
thiserror = "^2"
walkdir = "^2.5"
rust-stemmers = "^1.2"
stop-words = "^0.10"
config = { version = "^0.15", default-features = false, features = ["yaml"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rayon = "^1.11"
notify = "^8"
url = "^2.5"
chrono = "^0.4.44"
dashmap = "^6"
