[package]
name = "repo-reaper-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "repo-reaper-cli"

[lints]
workspace = true

[dependencies]
repo-reaper-core = { path = "../core", version = "0.1.0" }
clap = { version = "^4.6", features = ["derive"] }
anyhow = "^1.0"
notify = "^8"
rayon = "^1.11"
rust-stemmers = "^1.2"
stop-words = "^0.10"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = "^0.4.44"

[dev-dependencies]
tempfile = "^3"
