[package]
name = "repo-reaper-core"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "^2.5"
rust-stemmers = "^1.2"
stop-words = "^0.10"
config = { version = "^0.15", default-features = false, features = ["yaml"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rayon = "^1.11"
url = "^2.5"
dashmap = "^6"
thiserror = "^2.0"
